# penumbra-shell-backends

./: Cargo.toml  makefile
common/src/: lib.rs
niri-state-backend/: Cargo.toml
niri-state-backend/src/: api.rs  client.rs  main.rs  manager.rs  state.rs
src/: api.rs  client.rs  eww.rs  handlers.rs  lib.rs  main.rs  niri_ipc.rs  serialize.rs
system-state-backend/: Cargo.toml
system-state-backend/src/: api.rs  main.rs  manager.rs  state.rs  sysfs.rs  watch.rs
