[package]
name = "niri-state-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.99"
niri-ipc = "25.5.1"
futures = "0.3.31"
env_logger = "0.11.8"
log = "0.4.27"
serde = "1.0.219"
itertools = "0.14.0"
common = { version = "0.1.0", path = "../common" }
