[package]
name = "system-state-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
common = { version = "0.1.0", path = "../common" }
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.28"
notify = "8.2.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
zbus = { version = "5.12.0", default-features = false, features = ["tokio"] }
